--- a/fontend/styles/nav.css
+++ b/fontend/styles/nav.css
@@ -4,10 +4,7 @@ nav {
   width: 100%;
   height: 60px;
   position: fixed;
-  /* background-color: rgba(0, 0, 0, 0.4);  */
-  backdrop-filter: blur(5px); /* Aplica el desenfoque */
-  /* border-bottom: 1px solid rgba(255, 255, 255, 0.2); Línea divisora muy tenue */
-  /* box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); */
+  backdrop-filter: blur(5px);
   z-index: 1;
 }
 
@@ -29,9 +26,31 @@ nav {
 #links li:not(:last-child)::after {
   content: "|";
   padding-left: 10px;
-  color: #00c7ff;
+  color: var(--blue-color);
 }
 
 #links li a:hover {
   color: var(--font-color);
+}
+
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.hamburger span {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+}
+
+
+@media (max-width: 800px) {
+  nav{
+    display: none;
+  }
 }
