--- a/fontend/styles/style.css
+++ b/fontend/styles/style.css
@@ -34,7 +34,8 @@ h3 {
   color: black;
   font-size: 24px;
   margin-bottom: 10px;
-  text-shadow: 1px 1px 2px rgba(255, 255, 255, 1), -1px -1px 2px rgba(255, 255, 255, 1);
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 1),
+    -1px -1px 2px rgba(255, 255, 255, 1);
 }
 
 #intro h3 {
@@ -52,6 +53,11 @@ h3 {
   cursor: pointer;
   color: var(--blue-color);
   transition: background-color 0.3s, color 0.3s;
+}
+
+#botonContacto a {
+  text-decoration: none;
+  color: var(--font-color);
 }
 
 #botonContacto:hover {
@@ -94,8 +100,9 @@ h3 {
 #SobreMiDiv {
   width: 100%;
   max-width: 900px;
+  height: 200px;
+  margin-bottom: 50px;
   margin: auto;
-  height: 400px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -130,7 +137,7 @@ h3 {
   width: 100%;
   max-width: 900px;
   margin: auto;
-  height: 800px;
+  height: 1200px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -140,6 +147,7 @@ h3 {
 #proyectos {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 #misProyectosDiv h3 {
@@ -158,7 +166,7 @@ h3 {
   flex-direction: column;
 }
 
-.cartaimagen img {
+.cartaImagen img {
   width: 400px;
 }
 
@@ -203,6 +211,11 @@ h3 {
   content: url("../assets/svg/javascript hover.svg");
 }
 
+#reactjsImg:hover {
+  transform: translateY(-5px);
+  content: url("../assets/svg/reactjs hover.svg");
+}
+
 #nodejsImg:hover {
   transform: translateY(-5px);
   content: url("../assets/svg/nodejs hover.svg");
@@ -223,7 +236,7 @@ h3 {
 }
 
 .botonProyecto {
-  width: 49%;
+  width: 100%;
   padding: 5px 20px;
   background-color: var(--background-color);
   border: 2px solid var(--blue-color);
@@ -359,7 +372,7 @@ h3 {
   margin-bottom: 20px;
 }
 
-.logoTextoDiv{
+.logoTextoDiv {
   margin-bottom: 10px;
 }
 
@@ -413,4 +426,150 @@ select {
 #formMain button:hover {
   background-color: var(--blue-color);
   color: var(--background-color);
+}
+
+@media (max-width: 800px) {
+  #icon {
+    display: none;
+  }
+
+  #intro {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+  }
+
+  #intro h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  #intro h2 {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  #intro #imgHome img {
+    width: 250px;
+    margin: 0;
+  }
+
+  #SobreMiDiv {
+    height: 400px;
+    padding: 20px;
+  }
+
+  #sobreMiTexto {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  #sobreMiTexto #icon img {
+    width: 80px;
+  }
+
+  #proyectos {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #misHabilidadesDiv {
+    height: 600px;
+    margin-bottom: 0px;
+    padding: 20px;
+  }
+
+  #contactameDiv {
+    height: 600px;
+    margin-bottom: 0px;
+    padding: 20px;
+  }
+
+  .carta {
+    width: 90%;
+    height: auto;
+  }
+
+  .cartaImagen img {
+    width: 100%;
+  }
+
+  .contenedorHabilidades {
+    width: 80px;
+    height: 80px;
+  }
+
+  .contenedorHabilidades img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .contenedorHabilidades p {
+    font-size: 14px;
+  }
+
+  #contactameDiv {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  #misProyectosDiv {
+    height: auto;
+    padding: 20px;
+  }
+
+  #contactameMain {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #redesDiv {
+    padding-right: 20px;
+    display: flex;
+    align-items: center;
+  }
+
+  #redesDiv,
+  #forumularioContactoDiv {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #intro h1 {
+    font-size: 50px;
+  }
+
+  #intro h2 {
+    font-size: 20px;
+  }
+
+  .carta {
+    width: 45%;
+    margin: 10px 5px;
+  }
+
+  .contenedorHabilidades {
+    width: 100px;
+    height: 100px;
+  }
+
+  .contenedorHabilidades img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .contenedorHabilidades p {
+    font-size: 16px;
+  }
+
+  #redesDiv {
+    padding-right: 20px;
+  }
+
+  #forumularioContactoDiv {
+    padding-left: 20px;
+  }
 }
